--- a/config.json
+++ b/config.json
@@ -1,4 +1,6 @@
 {
   "forceUpdateVersion": 39,
-  "optionalUpdateVersion": 11
+  "optionalUpdateVersion": 11,
+  "latestVersionName": "1.3.7",
+  "features": "• Bug fixes\n• Performance improvements\n• Fully customisable color scheme\n• Save words to list\n• Automatic translation"
 }
